# clinicvoice

./: .coverage  .gitignore  ATTRIBUTION.txt  BUILD_LOG.md  README.md  pyproject.toml
data/: medical_lexicon_corrections.json
demo_app/: README.md  index.html  package-lock.json  package.json  vite.config.js
demo_app/src/: api.js  main.js  style.css
demo_app/src/components/: EscalationPanel.js  MetricsDashboard.js  Recorder.js  SpeakerTimeline.js  TrackModeIndicator.js  TranscriptViewer.js
docs/: architecture.md  nightingale_alignment.md  schema_erd.md
scripts/: benchmark.py  generate_synthetic_audio.py  run_demo.sh
src/: config.py  main.py
src/api/: middleware.py  routes.py  streaming.py
src/asr/: engine.py  language.py  lexicon.py  schemas.py
src/db/: models.py  retention.py  session.py
src/diarize/: engine.py  overlap.py  schemas.py
src/escalation/: engine.py  schemas.py  watchlist.json
src/ingest/: normalizer.py  receiver.py  schemas.py  separator.py
src/metrics/: der.py  mter.py  report.py  sisnr.py  wer.py
src/normalize/: acronyms.py  casing.py  confidence.py  digits.py  romanize.py  units.py
src/redact/: boundary.py  engine.py  patterns.py  schemas.py
tests/: conftest.py  test_access_boundary.py  test_corrections_improve.py  test_escalation.py  test_metrics_report.py  test_redaction.py  test_segmentation_schema.py  test_source_separation.py
tests/data/: ground_truth_consult.json  medical_lexicon.json
