[project]
name = "clinicvoice"
version = "0.1.0"
description = "Privacy-first local audio capture and transcription pipeline for clinical environments."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "openai-whisper>=20231117",
    "pyannote.audio>=3.1.0",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "asteroid>=0.7.0",
    "noisereduce>=3.0.0",
    "librosa>=0.10.2",
    "soundfile>=0.12.1",
    "pydub>=0.25.1",
    "presidio-analyzer>=2.2.354",
    "presidio-anonymizer>=2.2.354",
    "spacy>=3.7.0",
    "langdetect>=1.0.9",
    "jiwer>=3.0.3",
    "torchmetrics>=1.3.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
